--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,5 @@
+The beginning of hubub - a social network
+
 == Welcome to Rails
 
 Rails is a web-application framework that includes everything needed to create
